Bug 1509295 - Apply axis locking for flings at the start of the fling. r=botond

Instead of having special code in the velocity tracker to deal with axis
locking and cancel out the position delta, we can apply axis locking
when we transition from the pan to the fling and simply cancel the
velocity on locked axes. This avoids the problem where we start a fling
from an axis lock but velocity information from prior to the axis lock
is used to compute the (perhaps unexpected) fling trajectory.

Differential Revision: https://phabricator.services.mozilla.com/D24060