gfx/layers/apz/src/Axis.cpp
@@ -66,8 +66,8 @@ void Axis::UpdateWithTouchAtDevicePoint(ParentLayerCoord aPos,
   mPos = aPos;
 
   if (Maybe<float> newVelocity =
-          mVelocityTracker->AddPosition(aPos, aTimestampMs, mAxisLocked)) {
-    mVelocity = *newVelocity;
+          mVelocityTracker->AddPosition(aPos, aTimestampMs)) {
+    mVelocity = mAxisLocked ? 0 : *newVelocity;
   }
 }
 
@@ -237,15 +237,20 @@ void Axis::EndTouch(uint32_t aTimestampMs) {
   // mVelocityQueue is controller-thread only
   APZThreadUtils::AssertOnControllerThread();
 
-  mAxisLocked = false;
   // If the velocity tracker wasn't able to compute a velocity, zero out
   // the velocity to make sure we don't get a fling based on some old and
-  // no-longer-relevant value of mVelocity.
-  if (Maybe<float> velocity = mVelocityTracker->ComputeVelocity(aTimestampMs)) {
+  // no-longer-relevant value of mVelocity. Also if the axis is locked then
+  // just reset the velocity to 0 since we don't need any velocity to carry
+  // into the fling.
+  if (mAxisLocked) {
+    mVelocity = 0;
+  } else if (Maybe<float> velocity =
+                 mVelocityTracker->ComputeVelocity(aTimestampMs)) {
     mVelocity = *velocity;
   } else {
     mVelocity = 0;
   }
+  mAxisLocked = false;
   AXIS_LOG("%p|%s ending touch, computed velocity %f\n",
            mAsyncPanZoomController, Name(), mVelocity);
 }
