gfx/layers/apz/src/Axis.h
@@ -51,12 +51,9 @@ class VelocityTracker {
    * Record a new position along this axis, at the given timestamp.
    * Returns the average velocity between the last sample and this one, or
    * or Nothing() if a reasonable average cannot be computed.
-   * If |aIsAxisLocked| is true, no movement is happening along this axis,
-   * and this should be reflected both in the returned instantaneous velocity,
-   * and the internal state maintained for calling ComputeVelocity() later.
    */
-  virtual Maybe<float> AddPosition(ParentLayerCoord aPos, uint32_t aTimestampMs,
-                                   bool aIsAxisLocked) = 0;
+  virtual Maybe<float> AddPosition(ParentLayerCoord aPos,
+                                   uint32_t aTimestampMs) = 0;
   /**
    * Record movement of the dynamic toolbar along this axis by |aDelta|
    * over the given time range. Movement of the dynamic toolbar means
